mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-hs
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  clusterIP: None # headless service - não cria um IP para o serviço
